cmake_minimum_required(VERSION 3.16)
project(Data-Structures)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory (SpecialMatrix)
add_subdirectory(SparseMatrix)
add_subdirectory(reverse)
add_subdirectory(sudoku)
add_subdirectory(stringDuplicate)
add_subdirectory(palindrome)
add_subdirectory(missingElement)
add_subdirectory(Anagram)
add_subdirectory(ADT)

